--- a/src/config.in
+++ b/src/config.in
@@ -700,13 +700,16 @@ Boston, MA 02110-1301, USA.  */
 /* Define to 1 if you're using XFree386. */
 #undef HAVE_XFREE386
 
+/* Define to 1 if you have the Xft library. */
+#undef HAVE_XFT
+
 /* Define to 1 if XIM is available */
 #undef HAVE_XIM
 
 /* Define to 1 if you have the XkbGetKeyboard function. */
 #undef HAVE_XKBGETKEYBOARD
 
-/* Define to 1 if you have the Xpm libary (-lXpm). */
+/* Define to 1 if you have the Xpm library (-lXpm). */
 #undef HAVE_XPM
 
 /* Define to 1 if you have the `XrmSetDatabase' function. */
